--- a/notebook/2018-08-13_init_single_cell.ipynb
+++ b/notebook/2018-08-13_init_single_cell.ipynb
@@ -74,8 +74,8 @@
     }
    ],
    "source": [
-    "res4 = pd.read_parquet('../scrnaseq-wf/data/clusters.res.0.4.parquet')\n",
-    "tsne = pd.read_parquet('../scrnaseq-wf/data/tsne.parquet')\n",
+    "res4 = pd.read_parquet('../output/scrnaseq-wf/clusters.res.0.4.parquet')\n",
+    "tsne = pd.read_parquet('../output/scrnaseq-wf/tsne.parquet')\n",
     "\n",
     "n_clus = len(res4.cluster.unique())\n",
     "cmapper = dict(zip(range(n_clus), sns.color_palette('tab20', n_colors=n_clus)))\n",
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "metadata = pd.read_parquet('../scrnaseq-wf/data/metadata.parquet')\n",
+    "metadata = pd.read_parquet('../output/scrnaseq-wf/metadata.parquet')\n",
     "\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=plt.figaspect(1/2))\n",
     "sns.violinplot(x='rep', y='nGene', data=metadata, ax=ax1)\n",
@@ -145,7 +145,7 @@
    "source": [
     "def get_umi(rep):\n",
     "    print(f'rep {rep}')\n",
-    "    umi = cellranger_umi(f'../scrnaseq-wf/data/scrnaseq_samples/ovary{rep}_force/outs/molecule_info.h5')\n",
+    "    umi = cellranger_umi(f'../output/scrnaseq-wf/scrnaseq_samples/ovary{rep}_force/outs/molecule_info.h5')\n",
     "    dat = umi.groupby('cell_id').size()\n",
     "    dat.name = 'nUMI'\n",
     "    dat.sort_values(ascending=False, inplace=True)\n",
@@ -224,8 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tpm = pd.read_parquet('../scrnaseq-wf/data/tpm.parquet')\n",
-    "clusters = pd.read_parquet('../scrnaseq-wf/data/clusters.res.0.4.parquet')\n",
+    "tpm = pd.read_parquet('../output/scrnaseq-wf/tpm.parquet')\n",
+    "clusters = pd.read_parquet('../output/scrnaseq-wf/clusters.res.0.4.parquet')\n",
     "tpm_cluster = tpm.T.join(clusters).groupby('cluster').sum().T"
    ]
   },
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zscore = pd.read_parquet('../scrnaseq-wf/data/zscore_tpm.res.0.4.parquet')"
+    "zscore = pd.read_parquet('../output/scrnaseq-wf/zscore_tpm.res.0.4.parquet')"
    ]
   },
   {
@@ -274,8 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = pd.read_parquet('../scrnaseq-wf/data/tpm.res.0.4.parquet')\n",
-    "bulk = pd.read_parquet('../bulk-wf/data/tpm.parquet')"
+    "sc = pd.read_parquet('../output/scrnaseq-wf/tpm.res.0.4.parquet')\n",
+    "bulk = pd.read_parquet('../output/bulk-wf/tpm.parquet')"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw = pd.read_parquet('../scrnaseq-wf/data/raw.res.0.4.parquet')"
+    "raw = pd.read_parquet('../output/scrnaseq-wf/raw.res.0.4.parquet')"
    ]
   },
   {
@@ -417,8 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw = pd.read_parquet('../scrnaseq-wf/data/raw.parquet')\n",
-    "clusters = pd.read_parquet('../scrnaseq-wf/data/clusters.res.0.4.parquet')"
+    "raw = pd.read_parquet('../output/scrnaseq-wf/raw.parquet')\n",
+    "clusters = pd.read_parquet('../output/scrnaseq-wf/clusters.res.0.4.parquet')"
    ]
   },
   {
@@ -757,7 +757,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata = pd.read_parquet('../scrnaseq-wf/data/metadata.parquet')"
+    "metadata = pd.read_parquet('../output/scrnaseq-wf/metadata.parquet')"
    ]
   },
   {
@@ -932,7 +932,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat = cellranger_counts('../scrnaseq-wf/data/scrnaseq_samples/ovary1_force/outs/filtered_gene_bc_matrices_h5.h5')"
+    "dat = cellranger_counts('../output/scrnaseq-wf/scrnaseq_samples/ovary1_force/outs/filtered_gene_bc_matrices_h5.h5')"
    ]
   },
   {
