--- a/notebook/2018-08-14_get_zscores_for_sharvani.ipynb
+++ b/notebook/2018-08-14_get_zscores_for_sharvani.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zscores = pd.read_parquet('../scrnaseq-wf/data/zscore_tpm.res.0.4.parquet')\n",
+    "zscores = pd.read_parquet('../output/scrnaseq-wf/zscore_tpm.res.0.4.parquet')\n",
     "zscores.index.name = 'FBgn'\n",
     "dat = zscores.join(genes).set_index('gene_symbol', append=True)\n",
     "dat.sort_index(level='gene_symbol', inplace=True, )\n",
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw = pd.read_parquet('../scrnaseq-wf/data/raw.res.0.4.parquet')\n",
+    "raw = pd.read_parquet('../output/scrnaseq-wf/raw.res.0.4.parquet')\n",
     "dat = raw.join(genes).set_index('gene_symbol', append=True)\n",
     "dat.sort_index(level='gene_symbol', inplace=True, )\n",
     "dat.to_csv('../output/2018-08-14_raw.tsv', sep='\\t')"
