--- a/notebook/2018-08-20_dsx_tsne.ipynb
+++ b/notebook/2018-08-20_dsx_tsne.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "# Setup notebook\n",
-    "nbconfig = Nb.setup_notebook(seurat_dir='../scrnaseq-wf/data/scrnaseq_combine_force')"
+    "nbconfig = Nb.setup_notebook(seurat_dir='../output/scrnaseq-wf/scrnaseq_combine_force')"
    ]
   },
   {
@@ -72,8 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusters = pd.read_parquet('../scrnaseq-wf/data/clusters.res.0.4.parquet')\n",
-    "tpm = pd.read_parquet('../scrnaseq-wf/data/tpm.parquet')"
+    "clusters = pd.read_parquet('../output/scrnaseq-wf/clusters.res.0.4.parquet')\n",
+    "tpm = pd.read_parquet('../output/scrnaseq-wf/tpm.parquet')"
    ]
   },
   {
