--- a/notebook/2019-01-03_make_stack_for_salsa.ipynb
+++ b/notebook/2019-01-03_make_stack_for_salsa.ipynb
@@ -22,9 +22,9 @@
     "import tables\n",
     "\n",
     "# Project level imports\n",
-    "from larval_gonad.notebook import Nb\n",
-    "from larval_gonad.io import cellranger_umi\n",
-    "from larval_gonad.config import memory"
+    "from larval_gonad_ovary.notebook import Nb\n",
+    "from larval_gonad_ovary.io import cellranger_umi\n",
+    "from larval_gonad_ovary.config import memory"
    ]
   },
   {
@@ -122,9 +122,9 @@
    "outputs": [],
    "source": [
     "rep = 1\n",
-    "umi = cellranger_umi(f'../output/scrnaseq-wf/scrnaseq_samples/testis{rep}_force/outs/molecule_info.h5')\n",
+    "umi = cellranger_umi(f'../output/scrnaseq-wf/scrnaseq_samples/ovary{rep}_force/outs/molecule_info.h5')\n",
     "umi = umi.query('gene != \"Not a Gene\"')\n",
-    "umi.to_csv(f'../output/notebook/2018-11-01_make_stack_for_salsa_rep{rep}.tsv', sep='\\t', index=False)"
+    "umi.to_csv(f'../output/notebook/2019-01-03_make_ovary_stack_for_salsa_rep{rep}.tsv', sep='\\t', index=False)"
    ]
   },
   {
@@ -134,9 +134,9 @@
    "outputs": [],
    "source": [
     "rep = 2\n",
-    "umi = cellranger_umi(f'../output/scrnaseq-wf/scrnaseq_samples/testis{rep}_force/outs/molecule_info.h5')\n",
+    "umi = cellranger_umi(f'../output/scrnaseq-wf/scrnaseq_samples/ovary{rep}_force/outs/molecule_info.h5')\n",
     "umi = umi.query('gene != \"Not a Gene\"')\n",
-    "umi.to_csv(f'../output/notebook/2018-11-01_make_stack_for_salsa_rep{rep}.tsv', sep='\\t', index=False)"
+    "umi.to_csv(f'../output/notebook/2019-01-03_make_ovary_stack_for_salsa_rep{rep}.tsv', sep='\\t', index=False)"
    ]
   },
   {
@@ -146,9 +146,9 @@
    "outputs": [],
    "source": [
     "rep = 3\n",
-    "umi = cellranger_umi(f'../output/scrnaseq-wf/scrnaseq_samples/testis{rep}_force/outs/molecule_info.h5')\n",
+    "umi = cellranger_umi(f'../output/scrnaseq-wf/scrnaseq_samples/ovary{rep}_force/outs/molecule_info.h5')\n",
     "umi = umi.query('gene != \"Not a Gene\"')\n",
-    "umi.to_csv(f'../output/notebook/2018-11-01_make_stack_for_salsa_rep{rep}.tsv', sep='\\t', index=False)"
+    "umi.to_csv(f'../output/notebook/2019-01-03_make_ovary_stack_for_salsa_rep{rep}.tsv', sep='\\t', index=False)"
    ]
   },
   {
@@ -161,9 +161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:larval_gonad]",
+   "display_name": "Python [conda env:larval_gonad_ovary]",
    "language": "python",
-   "name": "conda-env-larval_gonad-py"
+   "name": "conda-env-larval_gonad_ovary-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
